--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
     "build": "webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "protractor e2e-tests/protractor.config.js"
   },
   "author": "Fábio Miranda",
   "contributors": [
@@ -19,11 +19,14 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-angularjs-annotate": "^0.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.0",
+    "chai-as-promised": "^7.1.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "mocha": "^3.4.2",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
